<resources>
    <string name="app_name">BnC</string>
    <string name="click_me">Click me</string>
    <string name="image_of_the_movie">Image of the movie</string>
    <string name="adult_rated_or_not">Adult rated or not</string>
    <string name="language_of_the_movie">Language of the movie</string>
    <string name="navigation_image">Navigation Image</string>
    <string name="image_of_the_movie_backdrop">Image of the movie backdrop</string>
    <string name="vote_average">Vote average :</string>
    <string name="release_date">Release Date :</string>
    <string name="movie_description">Movie Description</string>
    <string name="login_title">BnC</string>
    <string name="server_error">Issue fetching Data from server</string>

    <string name="micro_image">http://image.tmdb.org/t/p/w92</string>
    <string name="tiny_image">http://image.tmdb.org/t/p/w154</string>
    <string name="small_image">http://image.tmdb.org/t/p/w185</string>
    <string name="medium_image">http://image.tmdb.org/t/p/w342</string>
    <string name="large_image">http://image.tmdb.org/t/p/w500</string>
    <string name="huge_image">http://image.tmdb.org/t/p/w780</string>
    <string name="originial_image">http://image.tmdb.org/t/p/original</string>

</resources>
