<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="detail_view"
            type="com.movies.book.ui.details.DetailViewModel" />
    </data>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_margin"
                android:contentDescription="@string/image_of_the_movie_backdrop" />


            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_margin" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vote_average" />

            <TextView
                android:id="@+id/release_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release_date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_margin"
                android:text="@string/movie_description" />

            <TextView
                android:id="@+id/movie_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/child_margin" />
        </LinearLayout>
    </ScrollView>
</layout>